# arxiv-paper-summarizer

./: .gitignore  Makefile  README.md  pyproject.toml  t.ipynb
.github/workflows/: generate-arxiv-report-pr.yml  generate-arxiv-report.yml
examples/: arxiv_client_example.ipynb  generate_report_example.py  summarizer_example.ipynb
scripts/: generate_single_report.py  test_nltk_fix.py  windows_setup_helper.py
src/arxiv_paper_summarizer/: __init__.py  arxiv.py  error.py  message.py  prompt_function.py  report.py  summary.py  translation.py  types.py  utils.py
tests/: test_arxiv.py  test_nltk_utils.py  test_utils.py
