[tool.poetry]
name = "arxiv_paper_summarizer"
version = "0.0.2"
description = "An AI project that provides concise summaries from arXiv URLs via Gradio UI."
authors = ["happyPydog <codepydog@gmail.com>"]
packages = [{ include = "arxiv_paper_summarizer", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" 
gradio = "^5.4.0"
openai = "^1.53.0"
pydantic = "^2.9.2"
tiktoken = "^0.8.0"
langfuse = "^2.53.3"
python-dotenv = "^1.0.1"
arxiv = "^2.1.3"
pymupdf = "^1.24.13"
unstructured = {extras = ["all-docs"], version = "^0.16.4"}
more-itertools = "^10.5.0"
nbformat = "^5.10.4"
markdown2 = "^2.5.1"
weasyprint = "^63.0"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
mypy = "^1.12.0"
black = "^24.10.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 150
quiet = true


[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
check_untyped_defs = true


[tool.flake8]
max-line-length = 150
indent-size = 4
ignore = ["E501", "E704"]

[tool.isort]
profile = "black"
